--- a/src/main/resources/assets/infinity_nexus_mod/lang/pt_br.json
+++ b/src/main/resources/assets/infinity_nexus_mod/lang/pt_br.json
@@ -240,5 +240,7 @@
 
   "tooltip.infinity_nexus.wipe": "§4Wip",
 
-  "block.infinity_nexus_mod.crusher": "Triturador"
+  "block.infinity_nexus_mod.crusher": "Triturador",
+  "block.infinity_nexus_mod.press": "Prensa",
+  "block.infinity_nexus_mod.assembly": "Fabricadora"
 }
