- Adicionado base do FermentingBarrel

--- a/src/main/resources/assets/infinity_nexus_mod/lang/en_us.json
+++ b/src/main/resources/assets/infinity_nexus_mod/lang/en_us.json
@@ -174,7 +174,7 @@
   "item.infinity_nexus_mod.bucket_lubricant": "Bucket Lubricant",
   "fluid_type.infinity_nexus_mod.ethanol": "Fluid Ethanol",
   "item.infinity_nexus_mod.bucket_ethanol": "Bucket Ethanol",
-  "item.infinity_nexus_mod.bottle_ethanol": "Alcool Bottle",
+  "item.infinity_nexus_mod.alcohol_bottle": "Alcohol Bottle",
   "item.infinity_nexus_mod.bio_mass": "Bio Mass",
 
   "block.infinity_nexus_mod.asphalt": "Asphalt",
