--- a/src/main/resources/assets/infinity_nexus_mod/lang/pt_br.json
+++ b/src/main/resources/assets/infinity_nexus_mod/lang/pt_br.json
@@ -171,7 +171,7 @@
   "item.infinity_nexus_mod.bucket_lubricant": "Balde de Lubrificante",
   "fluid_type.infinity_nexus_mod.ethanol": "Alcool",
   "item.infinity_nexus_mod.bucket_ethanol": "Balde de Alcool",
-  "item.infinity_nexus_mod.bottle_ethanol": "Garrafa de Alcool",
+  "item.infinity_nexus_mod.alcohol_bottle": "Garrafa de Alcool",
   "item.infinity_nexus_mod.bio_mass": "Biomassa",
 
   "block.infinity_nexus_mod.asphalt": "Asfalto",
