--- a/src/main/resources/assets/infinity_nexus_mod/lang/en_us.json
+++ b/src/main/resources/assets/infinity_nexus_mod/lang/en_us.json
@@ -330,8 +330,11 @@
   "block.infinity_nexus_mod.mob_crusher": "Mob Crusher",
 
   "item.infinity_nexus_mod.linking_tool":"Linking Tool",
-  "tooltip.infinity_nexus.linking_tool": "§bHold §eShift + Higth Click §bon inventory container to select destine chest",
-  "block.infinity_nexus_mod.miner": "Miner"
+
+  "tooltip.infinity_nexus.linking_tool": "§bRename this item using the example below with the destination coordinates of the items (action radius: 100 blocks).\n\n§ex=30,y=80,z=-77,face=up\nAllowed sides:\n\n§bnorth, south, east, west, up, down.",
+  "block.infinity_nexus_mod.miner": "Miner",
+  "item.infinity_nexus.miner_description": "§5Multiblock Miner.\n§bIt must be placed at the correct height relative to the ground, depending on the level of the installed component.\n§9Add energy and wait a bit for an assembly example to be created.\n§fRedstone: 5th §a-> Copper.\n§fBasic: 5th §a-> Iron.\n§eReinforced: 7th §a-> Tin.\n§eLogic: 7th §a-> Nickel.\n§cAdvanced: 9th §a-> Brass.\n§cRefined: 9th §a-> Steel.\n§5Integral: 11th §a-> Industrial.\n§5Infinity: 11th §a-> Infinity.",
+  "item.infinity_nexus.mod_crusher_description": "Executes quickly and silently enemies that are above. The area depends on the installed component. In case there are many enemies within the action radius of the Mob Crusher and its slots are full, all will be executed without a chance for drops.\n§fRedstone:  §a1x1.\n§fBasic: §a3x3.\n§eReinforced: §a5x5\n§eLogic: §a7x7.\n§cAdvanced: §a9x9.\n§cRefined: §a11x11.\n§5Integral: §a13x13.\n§5Infinity: §a15x15"
 
 
 }
