--- a/src/main/resources/assets/infinity_nexus_mod/lang/en_us.json
+++ b/src/main/resources/assets/infinity_nexus_mod/lang/en_us.json
@@ -154,23 +154,23 @@
   "item.infinity_nexus_mod.infinity_dust": "Infinity dust",
   "item.infinity_nexus_mod.infinity_nugget": "Infinity Nugget",
 
-  "block.infinity_nexus_mod.wood_machine_casing": "Wood Estruture",
-  "block.infinity_nexus_mod.copper_machine_casing": "Copper Estruture",
-  "block.infinity_nexus_mod.silver_machine_casing": "Silver Estruture",
-  "block.infinity_nexus_mod.tin_machine_casing": "Tin Estruture",
-  "block.infinity_nexus_mod.lead_machine_casing": "Lead Estruture",
-  "block.infinity_nexus_mod.nickel_machine_casing": "Nickel Estruture",
-  "block.infinity_nexus_mod.zinc_machine_casing": "Zinc Estruture",
-  "block.infinity_nexus_mod.brass_machine_casing": "Brass Estruture",
-  "block.infinity_nexus_mod.bronze_machine_casing": "Bronze Estruture",
-  "block.infinity_nexus_mod.iron_machine_casing": "Iron Estruture",
-  "block.infinity_nexus_mod.glass_machine_casing": "Glass Estruture",
-  "block.infinity_nexus_mod.plastic_machine_casing": "Plastic Estruture",
-  "block.infinity_nexus_mod.gold_machine_casing": "Gold Estruture",
-  "block.infinity_nexus_mod.aluminum_machine_casing": "Aluminum Estruture",
-  "block.infinity_nexus_mod.industrial_machine_casing": "Industrial Estruture",
-  "block.infinity_nexus_mod.steel_machine_casing": "Steel Estruture",
-  "block.infinity_nexus_mod.infinity_machine_casing": "Infinity Estruture",
+  "block.infinity_nexus_mod.wood_machine_casing": "Wood Structure",
+  "block.infinity_nexus_mod.copper_machine_casing": "Copper Structure",
+  "block.infinity_nexus_mod.silver_machine_casing": "Silver Structure",
+  "block.infinity_nexus_mod.tin_machine_casing": "Tin Structure",
+  "block.infinity_nexus_mod.lead_machine_casing": "Lead Structure",
+  "block.infinity_nexus_mod.nickel_machine_casing": "Nickel Structure",
+  "block.infinity_nexus_mod.zinc_machine_casing": "Zinc Structure",
+  "block.infinity_nexus_mod.brass_machine_casing": "Brass Structure",
+  "block.infinity_nexus_mod.bronze_machine_casing": "Bronze Structure",
+  "block.infinity_nexus_mod.iron_machine_casing": "Iron Structure",
+  "block.infinity_nexus_mod.glass_machine_casing": "Glass Structure",
+  "block.infinity_nexus_mod.plastic_machine_casing": "Plastic Structure",
+  "block.infinity_nexus_mod.gold_machine_casing": "Gold Structure",
+  "block.infinity_nexus_mod.aluminum_machine_casing": "Aluminum Structure",
+  "block.infinity_nexus_mod.industrial_machine_casing": "Industrial Structure",
+  "block.infinity_nexus_mod.steel_machine_casing": "Steel Structure",
+  "block.infinity_nexus_mod.infinity_machine_casing": "Infinity Structure",
 
   "block.infinity_nexus_mod.molten_infinity_bucket": "Molten Infinity",
   "fluid.infinity_nexus_mod.molten_infinity": "Molten Infinity",
@@ -381,6 +381,8 @@
   "item.infinity_nexus_mod.stable_matter": "Stable Matter",
 
   "item.infinity_nexus_mod.hammer_range_upgrade": "Hammer Range Upgrade",
+
+  "item.infinity_nexus_mod.star_fragment": "Nether Star Fragment",
 
   "block.infinity_nexus_mod.solar": "Solar Panel Base",
   "item.infinity_nexus_mod.solar_pane": "Solar Panel",
